[package]
name = "csh-jukebox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
env_logger = "0.10.0"
lazy_static = "1.4.0"
log = "0.4.19"
musicbrainz_rs = "0.5.0"
reqwest = { version = "0.11.18", features = ["stream"] }
rodio = "0.17.1"
serde = { version = "1.0.178", features = ["derive"] }
serde_json = "1.0.104"
tokio = { version = "1.29.1", features = ["full"] }
youtube_dl = { version = "0.8.1", features = ["tokio"] }

